<resources>
    <!-- Profile -->
    <string name="app_name">Gamelogger</string>
    <string name="title_my_list">My List</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_game">Add Game</string>
    <string name="default_num_platforms">0</string>
    <string name="default_num_stats">0</string>
    <string name="tooltip_platforms">Top 5 platforms with the most games</string>

    <!-- R.menu.overflow_menu -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="sign_out">Sign out</string>

    <!-- R.layout -->
    <string name="about_fragment">About Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="username_profile">Username</string>
    <string name="profile_picture_profile">Profile picture</string>
    <string name="game_stats">Game Stats</string>
    <string name="done">Done</string>
    <string name="backlog">Backlog</string>
    <string name="playing">Playing</string>
    <string name="playlists">Playlists</string>

    <!-- Settings Preferences -->
    <string name="change_username">Change username</string>
    <string name="reply_title">Language</string>
    <string name="change_password">Change password</string>
    <string name="change_userinfo">User settings</string>
    <string name="change_appinfo">App settings</string>

    <string name="submit">søk</string>
    <string name="gamepicture">gamepicture</string>
    <string name="btndone">DONE</string>
    <string name="btnplaying">PLAYING</string>
    <string name="btnbacklog">BACKLOG</string>
    <string name="addedbutton">addedbutton</string>
    <string name="addbutton">addbutton</string>

    <!--fragment_gamelist_detail.xml-->
    <string name="loremIpsumTwoParagraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis nunc magna. Vivamus metus arcu, elementum vitae cursus eget, congue nec mauris. In blandit eu ipsum sit amet pellentesque. Donec a felis eleifend tortor sodales rutrum. Fusce facilisis tempor lacus ut viverra. Suspendisse potenti. Quisque tincidunt dignissim risus, ut mollis ante. Pellentesque egestas ullamcorper sem. Pellentesque sodales pulvinar lorem ut feugiat. Sed sapien risus, tristique id turpis ac, vehicula ultricies mauris. Phasellus eget leo at quam finibus molestie. Morbi placerat risus euismod mi mollis, quis gravida nisi lacinia. Proin pellentesque et orci sed rutrum. Fusce ultricies libero vitae risus pretium iaculis. Donec tortor tortor, ultricies sed ligula at, imperdiet fringilla turpis. Fusce mollis orci sit amet dolor consequat luctus. Vestibulum pharetra vulputate leo a dignissim. In ac iaculis quam. Sed vel magna mi. Duis malesuada lorem libero, non rhoncus ligula mattis vehicula. Nunc et dignissim diam, id maximus tellus. Aenean feugiat, tortor quis dictum ultricies, sem odio facilisis tortor, eu vulputate ex lorem in orci. Nullam vestibulum diam non dolor finibus dapibus. Proin auctor volutpat elit, nec faucibus lorem luctus in. Nunc tincidunt, ex et pulvinar aliquam, arcu ex dictum dui, quis placerat nisi eros iaculis dui. Aenean non tortor maximus, accumsan enim at, pellentesque nunc. Cras nec ante vel nulla faucibus suscipit.</string>
    <string name="game_picture_content_description_format">The Banner image for %s</string>
    <string name="loading">Loading…</string>

    <!--fragment_login_screen.xml-->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="game_logger">Game Logger</string>

</resources>