<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/change_userinfo">

        <EditTextPreference
            app:key="Change username"
            app:title="@string/change_username" />

        <EditTextPreference
            app:key="Change password"
            app:title="@string/change_password" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/change_appinfo">

        <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Enable message notifications"/>

        <ListPreference
            app:key="reply"
            app:title="@string/reply_title"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:defaultValue="reply"
            app:useSimpleSummaryProvider="true"/>
        </PreferenceCategory>

</PreferenceScreen>