<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/loginScreen">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.profilside.ui.mygamelist.MygamelistFragment"
        android:label="@string/title_my_list"
        tools:layout="@layout/fragment_gamelist" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.profilside.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.profilside.ui.gamesearch.GamesearchFragment"
        android:label="@string/title_add_game"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/loginScreen"
        android:name="com.example.profilside.LoginScreen"
        android:label="fragment_login_screen"
        tools:layout="@layout/fragment_login_screen" >
        <action
            android:id="@+id/action_loginScreen_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>